Close all handles after connection close when session decides to close connection on error.

This change also conditionally override quic connection error
only when the QuicChromiumClientStream contains a valid connection error
code.

Bug: 922739
Change-Id: Ib83d65cd5c03f89842a344fa599d3f874107c5b7
Reviewed-on: https://chromium-review.googlesource.com/c/1415304
Commit-Queue: Ryan Hamilton <rch@chromium.org>
Reviewed-by: Ryan Hamilton <rch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623555}
Former-commit-id: 59aaf078eaa908431e93a31c871f8d93e7821218